--- a/assets/styles/scss/general/_vars.scss
+++ b/assets/styles/scss/general/_vars.scss
@@ -3,3 +3,5 @@ $light-blue: rgb(143,170,220);
 $alt-color: rgb(255, 150, 81);
 $submit-width: 164px;
 $submit-margin: 0 calc(100% / 2 - $submit-width / 2);
+$tabl-brkpnt: 768px;
+$desk-brkpnt: 1020px;
