--- a/views/user/contact.phtml
+++ b/views/user/contact.phtml
@@ -32,7 +32,9 @@
                 <?php
             }?>
         </fieldset>
+        
         <fieldset class="textarea">
+            <div class="input-separator"></div>
             <label for="content">Message</label>
             <textarea id="content" name="content" placeholder="Votre texte ici..." required minlength="10" maxlength="2048"></textarea>
             <?php
