--- a/views/user/quote-request.phtml
+++ b/views/user/quote-request.phtml
@@ -11,13 +11,15 @@
     <ul>
         <li>Compatibilité des navigateurs</li>
         <li>Optimisation du SEO, du référencement</li>
-        <li>Compression des images et optimisation des performances</li>
+        <li>Compression des images et éco-conception</li>
+        <li>Optimisation des performances et minimisation</li>
         <li>Sécurisation des données et des actions malveillantes</li>
-        <li>Interface et Expérience Utilisateur (UI et UX) optimisé selon les attentes du site web</li>
+        <li>Interface et Expérience Utilisateur (UI et UX) optimisées</li>
     </ul>
     <p>Le formulaire suivant permet une approche plus précise de ce que vous attendez de notre service.</p>
     <p>La relation client que nous offront, affienera votre demande, pour vous offrir un site web sur mesure.</p>
     <form action="index.php?route=quote-request" method="POST" id="quoation_form">
+        <h2>Formulaire de création</h2>
         <fieldset>
             <legend>Catégorie du site web :</legend>
             <label for="category">Catégorie</label>
@@ -84,32 +86,32 @@
         <fieldset class="checkbox-field">
             <legend>Fonctionnalités e-commerce :</legend>
 
-            <label for="cms">Gestion des produits</label>
-            <input type="checkbox" name="cms" id="cms">
+            <label for="products-gestion">Gestion des produits</label>
+            <input type="checkbox" name="products" id="products">
             <span class="input-description">Ajout, édition et suppression de produits.</span>
 
             <div class="input-separator"></div>
 
-            <label for="suscribe">Panier d'achat</label>
-            <input type="checkbox" name="suscribing" id="suscribing">
+            <label for="kart">Panier d'achat</label>
+            <input type="checkbox" name="kart" id="kart">
             <span class="input-description">Fonctionnalité de panier pour les achats en ligne.</span>
 
             <div class="input-separator"></div>
 
-            <label for="reviews">Paiement en ligne</label>
-            <input type="checkbox" name="reviews" id="reviews">
+            <label for="paylink">Paiement en ligne</label>
+            <input type="checkbox" name="paylink" id="paylink">
             <span class="input-description">Intégration de passerelles de paiement pour les transactions.</span>
 
             <div class="input-separator"></div>
 
-            <label for="research">Facturation</label>
-            <input type="checkbox" name="research" id="research">
+            <label for="auto-quotation">Facturation</label>
+            <input type="checkbox" name="auto-quotation" id="auto-quotation">
             <span class="input-description">Génération automatique de factures pour les commandes.</span>
 
             <div class="input-separator"></div>
 
-            <label for="social">Système de notation</label>
-            <input type="checkbox" name="social" id="social">
+            <label for="notation">Système de notation</label>
+            <input type="checkbox" name="notation" id="notation">
             <span class="input-description">Permet aux utilisateurs de noter et de commenter les produits.</span>
         </fieldset>
 
@@ -118,14 +120,14 @@
         <fieldset class="checkbox-field">
             <legend>Sites de discussion et de communauté :</legend>
 
-            <label for="cms">Forums et discussions</label>
-            <input type="checkbox" name="cms" id="cms">
+            <label for="talking-forum">Forums et discussions</label>
+            <input type="checkbox" name="talking-forum" id="talking-forum">
             <span class="input-description">Création de forums, discussion de sujets.</span>
 
             <div class="input-separator"></div>
 
-            <label for="suscribe">Messagerie</label>
-            <input type="checkbox" name="suscribing" id="suscribing">
+            <label for="messaging">Messagerie</label>
+            <input type="checkbox" name="messaging" id="messaging">
             <span class="input-description">Possibilité d'envoyer des messages et des notifications.</span>
         </fieldset>
 
@@ -134,14 +136,14 @@
         <fieldset class="checkbox-field">
             <legend>Sites de réservation et de services :</legend>
 
-            <label for="cms">Système de réservation</label>
-            <input type="checkbox" name="cms" id="cms">
+            <label for="reservation">Système de réservation</label>
+            <input type="checkbox" name="reservation" id="reservation">
             <span class="input-description">Réservation de rendez-vous, services, etc.</span>
 
             <div class="input-separator"></div>
 
-            <label for="suscribe">Calendrier</label>
-            <input type="checkbox" name="suscribing" id="suscribing">
+            <label for="calendar">Calendrier</label>
+            <input type="checkbox" name="calendar" id="calendar">
             <span class="input-description">Affichage des disponibilités et des horaires.</span>
         </fieldset>
 
@@ -150,14 +152,14 @@
         <fieldset class="checkbox-field">
             <legend>Sites de médias et de divertissement :</legend>
 
-            <label for="cms">Intégration de vidéos</label>
-            <input type="checkbox" name="cms" id="cms">
+            <label for="video-integration">Intégration de vidéos</label>
+            <input type="checkbox" name="video-integration" id="video-integration">
             <span class="input-description">Diffusion de vidéos en direct ou à la demande.</span>
 
             <div class="input-separator"></div>
 
-            <label for="suscribe">Système de notation et de commentaires</label>
-            <input type="checkbox" name="suscribing" id="suscribing">
+            <label for="media-reviews">Système de notation et de commentaires</label>
+            <input type="checkbox" name="media-reviews" id="media-reviews">
             <span class="input-description">Notation et commentaires sur les médias.</span>
         </fieldset>
 
@@ -166,20 +168,20 @@
         <fieldset class="checkbox-field">
             <legend>Sites d'entreprise et professionnels :</legend>
 
-            <label for="cms">Tableau de bord administrateur</label>
-            <input type="checkbox" name="cms" id="cms">
+            <label for="admin-dashboard">Tableau de bord administrateur</label>
+            <input type="checkbox" name="admin-dashboard" id="admin-dashboard">
             <span class="input-description">Interface pour gérer les utilisateurs, le contenu, etc.</span>
 
             <div class="input-separator"></div>
 
-            <label for="suscribe">Système de notifications</label>
-            <input type="checkbox" name="suscribing" id="suscribing">
+            <label for="notification">Système de notifications</label>
+            <input type="checkbox" name="notification" id="notification">
             <span class="input-description">Envoi de notifications par e-mail ou messages aux utilisateurs.</span>
 
             <div class="input-separator"></div>
 
-            <label for="suscribe">Multilinguisme</label>
-            <input type="checkbox" name="suscribing" id="suscribing">
+            <label for="language">Multilinguisme</label>
+            <input type="checkbox" name="language" id="language">
             <span class="input-description">Prise en charge de plusieurs langues pour un public international.</span>
         </fieldset>
 
@@ -188,25 +190,22 @@
         <fieldset class="checkbox-field">
             <legend>Fonctionnalités de Design :</legend>
 
-            <label for="cms">Design responsive</label>
-            <input type="checkbox" name="cms" id="cms">
+            <label for="responsive-design">Design responsive</label>
+            <input type="checkbox" name="responsive-design" id="responsive-design">
             <span class="input-description">Assure que le site s'adapte correctement à tous les types d'appareils.</span>
 
             <div class="input-separator"></div>
 
-            <label for="suscribe">Transmition du contenu</label>
-            <select name="" id="">
-                <option value="">Contenu inexistant</option>
-                <option value="">Contenu partiel</option>
-                <option value="">Contenu complet</option>
+            <label for="content-transmition">Transmition du contenu</label>
+            <select name="content-transmition" id="content-transmition">
+                <option value="no">Contenu inexistant</option>
+                <option value="partial">Contenu partiel</option>
+                <option value="complete">Contenu complet</option>
             </select>
             <span class="input-description">Le contenu de création (logos, images, vidéos, etc.) qui sera transmis à pour le développement</span>
 
             <div class="input-separator"></div>
 
-            <label for="suscribe">Multilinguisme</label>
-            <input type="checkbox" name="suscribing" id="suscribing">
-            <span class="input-description">Prise en charge de plusieurs langues pour un public international.</span>
         </fieldset>
 
         <div class="fieldset-separator"></div>
