--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -44,7 +44,7 @@
 }
 #top-header .navbar #menu li a {
   color: white;
-  font-size: 20px;
+  font-size: 1.25rem;
   text-decoration: none;
 }
 #top-header .navbar #menu li a:hover {
@@ -57,6 +57,50 @@
   flex-direction: column;
 }
 
+@media screen and (min-width: 768px) { /* TABLETTE */ }
+@media screen and (min-width: 1020px) { /* DESKTOP */
+  #top-header {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+  #top-header .logo {
+    width: 28%;
+  }
+  #top-header .burger-container {
+    display: none;
+  }
+  #top-header .navbar {
+    position: relative;
+    top: inherit !important;
+    right: 0;
+  }
+  #top-header .navbar #menu {
+    width: 100%;
+    right: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background: none;
+    justify-content: flex-end;
+  }
+  #top-header .navbar #menu li {
+    padding: 9px;
+  }
+  #top-header .navbar #menu li a {
+    color: white;
+    font-size: 0.75rem;
+    text-decoration: none;
+  }
+  #top-header .navbar #menu li a:hover {
+    color: rgb(255, 150, 81);
+    text-decoration: underline;
+    font-weight: bold;
+  }
+  #top-header .navbar #menu li {
+    margin: auto 1vw;
+  }
+}
 #left-aside-access {
   width: 18px;
   height: 100px;
@@ -113,10 +157,15 @@
 
 form {
   margin: 0 auto;
-  padding: 0;
-  width: 100%;
+  padding: 0.5rem;
+  width: 94%;
   background: linear-gradient(to bottom, rgb(47, 85, 151), rgb(47, 85, 151), rgb(143, 170, 220));
   border-radius: 0 16px 0 16px;
+}
+form h2 {
+  font-size: 1.75rem !important;
+  color: white !important;
+  text-align: center;
 }
 form p {
   color: white;
@@ -131,9 +180,9 @@ form div.fieldset-separator {
   background-color: white;
 }
 form fieldset {
-  width: 100%;
-  margin-top: 5px;
-  padding: 0;
+  width: calc(100% - 0.75rem);
+  margin-top: 0.25rem;
+  padding: 0.25rem;
   border: none;
   display: flex;
   flex-wrap: wrap;
@@ -141,36 +190,39 @@ form fieldset {
 form fieldset legend {
   width: 100%;
   margin-top: 2rem;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
+  font-weight: bold;
+  text-transform: uppercase;
   color: white;
   text-decoration: underline;
 }
 form fieldset label {
-  width: auto;
+  width: calc(auto - 25%);
   color: white;
-  margin: 16px 10px 0 16px;
+  margin: 8px 10px 0 16px;
 }
 form fieldset input {
-  width: 95%;
-  margin-top: 8px;
+  width: 100%;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
   border-radius: 0 5px 0 5px;
   box-shadow: 3px 3px 3px 0px rgb(143, 170, 220);
 }
 form fieldset select {
-  width: 75%;
+  width: 100%;
   height: 1rem;
-  margin: auto auto 0.15rem 1rem;
+  margin: 0.25rem auto 0.15rem 0.25rem;
 }
 form fieldset textarea {
-  width: 96%;
+  width: 100%;
   height: 300px;
-  margin-top: 8px;
+  margin-top: 0.5rem;
   border-radius: 0 5px 0 5px;
   box-shadow: 3px 3px 3px 0px rgb(143, 170, 220);
   border: solid 1px black;
 }
 form fieldset span.input-description {
-  width: 100%;
+  width: calc(100% - 1rem);
   font-size: 0.75rem;
   color: white;
 }
@@ -179,7 +231,7 @@ form fieldset span.input-description:last-child {
 }
 form fieldset div.input-separator {
   margin: 1rem;
-  width: 100%;
+  width: calc(100% - 1rem);
   height: 1px;
   background-color: cyan;
 }
@@ -190,21 +242,31 @@ form fieldset.checkbox-field {
 form fieldset.checkbox-field label {
   width: 75%;
   margin-right: 0;
-  margin-left: 0.26rem;
+  margin-left: 0.25rem;
   font-size: 1rem;
 }
 form fieldset.checkbox-field input {
   width: auto;
   height: auto;
-  margin: auto auto 0.25rem 1rem;
+  margin: 0.5rem 1rem 0.5rem auto;
 }
 form fieldset.textarea {
-  height: 200px;
+  height: 16rem;
 }
 form fieldset.textarea textarea {
   height: 80%;
 }
 
+@media screen and (min-width: 768px) { /* TABLETTE */
+  html form {
+    width: 60%;
+  }
+}
+@media screen and (min-width: 1020px) { /* DESKTOP */
+  html form {
+    width: 44%;
+  }
+}
 .template-card {
   height: auto;
   width: 68%;
@@ -328,7 +390,7 @@ input[type*=submit] {
 }
 
 #float-btn {
-  width: 25%;
+  width: 20%;
   position: fixed;
   right: 0;
   top: 60vh;
@@ -382,6 +444,16 @@ input[type*=submit] {
   cursor: pointer;
 }
 
+@media screen and (min-width: 768px) { /* TABLETTE */
+  #float-btn {
+    width: 10%;
+  }
+}
+@media screen and (min-width: 1020px) { /* DESKTOP */
+  #float-btn {
+    width: 6%;
+  }
+}
 html {
   scroll-behavior: smooth;
 }
@@ -407,7 +479,7 @@ html body main .text-center {
   text-align: center;
 }
 html body main #main-header {
-  height: 33vw;
+  height: 126px;
   display: flex;
   justify-content: center;
   text-align: center;
@@ -416,8 +488,10 @@ html body main #main-header {
   background-size: cover;
 }
 html body main #main-header #tagline-container {
-  margin-top: 10%;
-  height: 30%;
+  margin: auto;
+  padding: 0.25rem;
+  width: 92%;
+  height: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -428,6 +502,30 @@ html body main #main-header #tagline-container #tagline {
   font-size: 3.5vw;
 }
 
+@media screen and (min-width: 768px) {
+  html body main #main-header {
+    height: 250px;
+  }
+  html body main #main-header #tagline-container {
+    width: 75%;
+    height: 30%;
+  }
+  html body main #main-header #tagline-container #tagline {
+    font-size: 2.75vw;
+  }
+}
+@media screen and (min-width: 1020px) { /* DESKTOP */
+  html body main #main-header {
+    height: 360px;
+  }
+  html body main #main-header #tagline-container {
+    width: 75%;
+    height: 30%;
+  }
+  html body main #main-header #tagline-container #tagline {
+    font-size: 2.25vw;
+  }
+}
 #top-footer {
   width: 100%;
   height: auto;
@@ -493,7 +591,7 @@ html body main #main-header #tagline-container #tagline {
 }
 
 html {
-  font-size: 18px;
+  font-size: 16px;
   font-family: "Roboto", sans-serif;
 }
 html h1, html h2, html h3 {
@@ -509,17 +607,17 @@ html #tagline {
 }
 html h1 {
   text-align: center;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
 }
 html h1::after {
   content: url("../../images/decorations/take-shape.svg");
   display: inline-block;
   opacity: 0.5;
-  width: 90px;
+  width: 3rem;
   height: auto;
 }
 html h2 {
-  font-size: 1.4rem;
+  font-size: 1.25rem;
   margin-left: 20px;
 }
 html h3 {
@@ -538,6 +636,30 @@ html .card-title {
   text-overflow: ellipsis;
 }
 
+@media screen and (min-width: 768px) {
+  html {
+    font-size: 20px;
+    background-color: #ccc;
+  }
+  html h1 {
+    font-size: 2rem;
+  }
+  html h2 {
+    font-size: 1.4rem;
+  }
+  html h1::after {
+    width: 4.25rem;
+  }
+}
+@media screen and (min-width: 1020px) { /* DESKTOP */
+  html {
+    font-size: 24px;
+    background-color: #ccc;
+  }
+  html h1::after {
+    width: 5rem;
+  }
+}
 .homepage-container #main-header {
   background-image: url("../../images/backgrounds/homepage-background.jpg");
 }
