--- a/assets/styles/scss/general/_form.scss
+++ b/assets/styles/scss/general/_form.scss
@@ -6,10 +6,16 @@
 form
 {
   margin: 0 auto;
-  padding: 0;
-  width: 100%; // À modifier en desktop
+  padding: 0.5rem;
+  width: 94%;
   background: linear-gradient(to bottom, $dark-blue, $dark-blue, $light-blue);
   border-radius: 0 16px 0 16px;
+  h2
+  {
+    font-size: 1.75rem !important;
+    color: white !important;
+    text-align: center;
+  }
   p
   {
     color: white;
@@ -27,9 +33,9 @@ form
   }
   fieldset
   {
-    width: 100%;
-    margin-top: 5px;
-    padding: 0;
+    width: calc(100% - 0.75rem);
+    margin-top: 0.25rem;
+    padding: 0.25rem;
     border: none;
     display: flex;
     flex-wrap: wrap;
@@ -37,38 +43,41 @@ form
     {
       width: 100%;
       margin-top: 2rem;
-      font-size: 1.5rem;
+      font-size: 1.25rem;
+      font-weight: bold;
+      text-transform: uppercase;
       color: white;
       text-decoration: underline;
     }
 
     label
     {
-      width: auto;
+      width: calc(auto - 25%);
       color: white;
-      margin: 16px 10px 0 16px;
+      margin: 8px 10px 0 16px;
     }
 
     input
     {
-      width: 95%;
-      margin-top: 8px;
+      width: 100%;
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
       border-radius: 0 5px 0 5px;
       box-shadow: 3px 3px 3px 0px $light-blue;
     }
 
     select
     {
-      width: 75%;
+      width: 100%;
       height: 1rem;
-      margin: auto auto 0.15rem 1rem;
+      margin: 0.25rem auto 0.15rem 0.25rem;
     }
 
     textarea
     {
-      width: 96%;
+      width: 100%;
       height: 300px;
-      margin-top: 8px;
+      margin-top: 0.5rem;
       border-radius: 0 5px 0 5px;
       box-shadow: 3px 3px 3px 0px $light-blue;
       border: solid 1px black;
@@ -76,7 +85,7 @@ form
 
     span.input-description
     {
-      width: 100%;
+      width: calc(100% - 1rem);
       font-size: 0.75rem;
       color: white;
     }
@@ -89,7 +98,7 @@ form
     div.input-separator
     {
       margin: 1rem;
-      width: 100%;
+      width: calc(100% - 1rem);
       height: 1px;
       background-color: cyan;
     }
@@ -102,23 +111,42 @@ form
     {
       width: 75%; //auto en desktop
       margin-right: 0;
-      margin-left:0.26rem;
+      margin-left:0.25rem;
       font-size: 1rem;
     }
     input
     {
       width: auto;
       height: auto;
-      margin: auto auto 0.25rem 1rem;
+      margin: 0.5rem 1rem 0.5rem auto;
     }
     
   }
   fieldset.textarea
   {
-    height: 200px;
+    height: 16rem;
     textarea
     {
       height: 80%;
+    }
+  }
+}
+
+@media screen and (min-width: $tabl-brkpnt){ /* TABLETTE */
+  html {
+    form
+    {
+      width: 60%;
+    }
+  }
+  
+}
+
+@media screen and (min-width: $desk-brkpnt){ /* DESKTOP */
+  html {
+    form
+    {
+      width: 44%;
     }
   }
 }
