--- a/assets/styles/scss/general/_header.scss
+++ b/assets/styles/scss/general/_header.scss
@@ -53,7 +53,7 @@
         a
         {
           color: white;
-          font-size: 20px;
+          font-size: 1.25rem;
           text-decoration: none;
         }
         a:hover
@@ -70,5 +70,71 @@
       flex-direction: column;
     }
   }
+}
+
+@media screen and (min-width: $tabl-brkpnt){ /* TABLETTE */
+  #top-header
+  {
+    .navbar
+    {
+      #menu
+      {
+        
+      }
+    }
+  }
+}
+
+@media screen and (min-width: $desk-brkpnt){ /* DESKTOP */
   
+  #top-header
+  {
+    flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+    .logo
+    {
+      width: 28%;
+    }
+    .burger-container
+    {
+      display: none;
+    }
+    .navbar
+    {
+      position: relative;
+      top: inherit !important;
+      right: 0;
+      #menu
+      {
+        width: 100%;
+        right: 0;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        background:none;
+        justify-content:flex-end;
+        li
+        {
+          padding: 9px;
+          a
+          {
+            color: white;
+            font-size: 0.75rem;
+            text-decoration: none;
+          }
+          a:hover
+          {
+            color: $alt-color;
+            text-decoration: underline;
+            font-weight: bold;
+          }
+        }
+        li
+        {
+          margin: auto 1vw;
+        }
+      }
+    }
+  }
 }
