--- a/assets/styles/scss/typo/_typographie.scss
+++ b/assets/styles/scss/typo/_typographie.scss
@@ -4,7 +4,7 @@
 @import '../general/vars.scss';
 
 html{
-    font-size: 18px;
+    font-size: 16px;
     font-family: 'Roboto', sans-serif;
     h1,h2,h3 
     {
@@ -22,19 +22,19 @@ html{
     h1
     {
         text-align: center;
-        font-size: 1.75rem;
+        font-size: 1.5rem;
     }
     h1::after
     {
         content: url("../../images/decorations/take-shape.svg");
         display:inline-block;
         opacity: 0.5;
-        width: 90px;
+        width: 3rem;
         height: auto;
     }
     h2
     {
-        font-size: 1.4rem;
+        font-size: 1.25rem;
         margin-left: 20px;
     }
     h3
@@ -59,3 +59,32 @@ html{
 
 }
 
+@media screen and (min-width: $tabl-brkpnt){ //TABLETTE
+    html {
+        font-size: 20px;
+        background-color: #ccc;
+        h1
+        {
+            font-size: 2rem;
+        }
+        h2
+        {
+            font-size: 1.4rem;
+        }
+        h1::after
+        {
+            width: 4.25rem;
+        }
+    }
+  }
+
+  @media screen and (min-width: $desk-brkpnt){ /* DESKTOP */
+    html {
+        font-size: 24px;
+        background-color: #ccc;
+        h1::after
+        {
+            width: 5rem;
+        }
+    }
+  }
