avant la transition d'IDE

--- a/assets/styles/scss/general/_article.scss
+++ b/assets/styles/scss/general/_article.scss
@@ -31,7 +31,7 @@
         width: 100%;
     }
 
-    // À effectuer seulement sur desktop
+    // À effectuer seulement sur desktop?
     img.center-picture:hover 
     {
         animation: imageZoomCenter 0.75s forwards;
