--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -16,5 +16,5 @@
 @use 'views/account';
 @use 'views/dashboard';
 @use 'views/contact';
-@use 'views/quote-request';
+@use 'views/request';
 @use 'views/gnu';
