--- a/assets/styles/scss/views/_register.scss
+++ b/assets/styles/scss/views/_register.scss
@@ -1,22 +1,17 @@
 @import '../general/vars.scss';
 
-.register-container
-{
-  #main-header
-  {
+#register-container {
+  #main-header {
     background-image: url("../../images/backgrounds/register-background.jpg");
     background-size: contain;
-    #tagline-container
-    {
+    #tagline-container {
       background-color: rgba(255, 255, 255, 0.9);
-      #tagline
-      {
+      #tagline {
         color: $dark-blue;
       }
     }
   }
-  #left-aside-access
-  {
+  #left-aside-access {
     display: none;
   }
 }
