--- a/views/NotFound.phtml
+++ b/views/NotFound.phtml
@@ -1,2 +1,2 @@
-<h1>Erreur 404 de malade poto!</h1>
-<h2>Page non found! l'URL est completement HS</h2>
+<h1>Erreur 404!</h1>
+<h2>Page non trouvée! l'URL est erroné</h2>
