--- a/views/admin/dashboard.phtml
+++ b/views/admin/dashboard.phtml
@@ -1,7 +1,7 @@
 <!-- ------------------------------------------------------------------------------------- -->
 <!-- --------------------------------PARTIE PRINCIPALE(VIEW)------------------------------ -->
 <!-- ------------------------------------------------------------------------------------- -->
-<main class="dashboard-container" id="dashboard-container">
+<main id="dashboard-container">
     <header id="main-header">
         <div id="tagline-container">
             <p id="tagline">
@@ -48,7 +48,7 @@
         <li><a href="#control-section" id="review-link">Avis</a></li>
         <li><a href="#control-section" id="appointment-link">Rendez-vous</a></li>
         <li><a href="#control-section" id="quotation-link">Devis</a></li>
-        <li><a href="#control-section" id="tag-link">Tags</a></li>
+        <li><a href="#control-section" id="request-link">Sur-mesure</a></li>
     </ul>
 </aside>
 <script type="module" src="assets/js/dashboard.js"></script>
