--- a/views/guest/login.phtml
+++ b/views/guest/login.phtml
@@ -1,4 +1,4 @@
-<main class="login-container" id="login-container">
+<main id="login-container">
     <header id="main-header">
         <div id="tagline-container">
             <p id="tagline">
