--- a/views/guest/register.phtml
+++ b/views/guest/register.phtml
@@ -1,4 +1,4 @@
-<main class="register-container" id="register-container">
+<main id="register-container">
     <header id="main-header">
         <div id="tagline-container">
             <p id="tagline">
