--- a/views/homepage.phtml
+++ b/views/homepage.phtml
@@ -1,4 +1,4 @@
-<main id="homepage-container" class="homepage-container">
+<main id="homepage-container">
     <!-- --------------------------- -->
     <!-- -----HEADER-----HEADER----- -->
     <!-- --------------------------- -->
@@ -21,7 +21,7 @@
             professionnels des solutions de Développement web et logiciel innovantes et sur mesure.
         </p>
     </section>
-    <h2>Dernières templates</h2>
+    <h2>Dernières créations</h2>
     <section id="templates-section">   
     <?php
     if(isset($this->data["templates"]))
