--- a/views/user/account.phtml
+++ b/views/user/account.phtml
@@ -8,7 +8,7 @@
         $info = $this->data["info"];
     }
 ?>
-<main class="account-container">
+<main id="account-container">
     <header id="main-header">
         <div id="tagline-container">
             <p id="tagline">
