--- a/views/user/contact.phtml
+++ b/views/user/contact.phtml
@@ -1,4 +1,4 @@
-<main class="contact-container" id="contact-container">
+<main id="contact-container">
     <header id="main-header">
         <div id="tagline-container">
             <p id="tagline">
