--- a/views/user/request.phtml
+++ b/views/user/request.phtml
@@ -1,12 +1,12 @@
-<main class="quote-request-container" id="quote-request-container">
+<main id="request-container">
     <header id="main-header">
         <div id="tagline-container">
             <p id="tagline">
-                Un formulaire pour un devis
+                Commençez votre projet
             </p>
         </div>
     </header>
-    <h1>Demande de devis</h1>
+    <h1>Demandez votre site sur-mesure</h1>
     <h2>Nos créations comprennent toutes les fonctionnalitées suivantes de base:</h2>
     <ul>
         <li>Compatibilité des navigateurs</li>
@@ -18,8 +18,8 @@
     </ul>
     <p>Le formulaire suivant permet une approche plus précise de ce que vous attendez de notre service.</p>
     <p>La relation client que nous offront, affienera votre demande, pour vous offrir un site web sur mesure.</p>
-    <form action="index.php?route=quote-request" method="POST" id="quoation_form">
-        <h2>Formulaire de création</h2>
+    <form action="index.php?route=request" method="POST" id="request_form">
+        <h2>Formulaire de demande</h2>
         <fieldset>
             <legend>Catégorie du site web :</legend>
             <label for="category">Catégorie</label>
@@ -48,7 +48,7 @@
 
             <label for="cms">Utilisation d'un système de gestion de contenu (CMS)</label>
             <input type="checkbox" name="cms" id="cms">
-            <span class="input-description">Réduis la personnalisation et les possibilitées fonctionnelles.</span>
+            <span class="input-description">Réduis la personnalisation et les possibilitées fonctionnelles. Ainsi que le coût!</span>
 
             <div class="input-separator"></div>
 
