--- a/assets/styles/scss/views/_dashboard.scss
+++ b/assets/styles/scss/views/_dashboard.scss
@@ -1,79 +1,65 @@
 @import '../general/vars.scss';
 
-.dashboard-container
-{
-  #main-header
-  {
+#dashboard-container {
+  #main-header {
     background-image: url("../../images/backgrounds/dashboard-background.jpg");
-    #tagline-container
-    {
-      background-color: rgba(255,255,255,0.9);
-      #tagline
-      {
+    #tagline-container {
+      background-color: rgba(255, 255, 255, 0.9);
+      #tagline {
         color: $dark-blue;
       }
     }
   }
-  #search-section
-  {
+  #search-section {
     display: flex;
 
-    fieldset:first-child
-    {
+    fieldset:first-child {
       margin: 0 auto;
       border-radius: 0 5px 0 5px;
       border-color: $dark-blue;
-      width: 30%;
-      input
-      {
+      width: 100%;
+      input {
         width: 100%;
       }
     }
-    fieldset:last-child
-    {
+    fieldset:last-child {
       margin: 0 auto;
       border-radius: 0 5px 0 5px;
       border-color: $dark-blue;
-      width: 70%;
-      input
-      {
+      width: 100%;
+      input {
         width: 100%;
       }
     }
   }
-  #control-section
-  {
+  #control-section {
     overflow-x: auto;
     width: 100%;
-    
-    table
-    {
+
+    table {
       margin: 0 auto;
       border-radius: 0 16px 0 16px;
       border: solid 2px $dark-blue;
-      
+
       padding: 1rem;
-      tr:nth-child(even)
-      {
+      tr:nth-child(even) {
         background-color: $light-blue;
       }
 
-      td
-      {
-        max-width: 3rem;
+      td {
+        // max-width: 3rem;
         padding-left: 0.5rem;
         border-bottom: solid 1px black;
       }
-      tr, td, th
-      {
+      tr,
+      td,
+      th {
         height: 1.25rem;
-        overflow:hidden;
+        overflow: hidden;
         white-space: nowrap;
       }
-      .col-id
-      {
-        min-width: 0;
-        max-width: 2.5rem;
+      .col-id {
+        min-width: 0; // max-width: 2.5rem;
       }
     }
   }
