--- a/assets/styles/scss/views/_homepage.scss
+++ b/assets/styles/scss/views/_homepage.scss
@@ -1,43 +1,35 @@
 @import '../general/vars.scss';
 
-.homepage-container
-{
-  #main-header
-  {
+#homepage-container {
+  #main-header {
     background-image: url("../../images/backgrounds/homepage-background.jpg");
-    #tagline-container
-    {
-      background-color: rgba(47,85,151,0.9);
-      #tagline
-      {
+    #tagline-container {
+      background-color: rgba(47, 85, 151, 0.9);
+      #tagline {
         color: white;
       }
     }
   }
-  #templates-section
-  {
+  #templates-section {
     width: 100%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
-    .template-card
-    {
+    .template-card {
       width: 280px;
     }
 
-    
+
   }
 
-  #reviews-section
-  {
+  #reviews-section {
     width: 100%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
-    .review-card
-    {
+    .review-card {
       width: 280px;
       height: 200px;
       overflow: scroll;
