--- a/assets/styles/scss/views/_login.scss
+++ b/assets/styles/scss/views/_login.scss
@@ -1,21 +1,16 @@
 @import '../general/vars.scss';
 
-.login-container
-{
-  #main-header
-  {
+#login-container {
+  #main-header {
     background-image: url("../../images/backgrounds/login-background.jpg");
-    #tagline-container
-    {
+    #tagline-container {
       background-color: rgba(255, 255, 255, 0.9);
-      #tagline
-      {
+      #tagline {
         color: $dark-blue;
       }
     }
   }
-  #left-aside-access
-  {
+  #left-aside-access {
     display: none;
   }
 }
