--- a/assets/styles/scss/views/_request.scss
+++ b/assets/styles/scss/views/_request.scss
@@ -1,13 +1,19 @@
 @import '../general/vars.scss';
 
-#account-container {
+#request-container {
+  p {
+    text-align: center;
+  }
   #main-header {
-    background-image: url("../../images/backgrounds/account-background.jpg");
+    background-image: url("../../images/backgrounds/request-background.jpg");
     #tagline-container {
       background-color: rgba(255, 255, 255, 0.9);
       #tagline {
         color: $dark-blue;
       }
     }
+  }
+  #left-aside-access {
+    display: none;
   }
 }
