--- a/assets/styles/scss/views/_shop.scss
+++ b/assets/styles/scss/views/_shop.scss
@@ -1,28 +1,25 @@
 @import '../general/vars.scss';
 
-.shop-container
-{
-  #main-header
-  {
+#shop-container {
+  #main-header {
     background-image: url("../../images/backgrounds/shop-background.jpg");
-    #tagline-container
-    {
-      background-color: rgba(47,85,151,0.9);
-      #tagline
-      {
+    #tagline-container {
+      background-color: rgba(47, 85, 151, 0.9);
+      #tagline {
         color: white;
       }
     }
   }
-  #templates-section
-  {
+  #templates-section {
+    p:first-child {
+      width: 100%;
+    }
     width: 100%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
-    .template-card
-    {
+    .template-card {
       width: 280px;
     }
   }
