--- a/views/guest/_footer.phtml
+++ b/views/guest/_footer.phtml
@@ -9,5 +9,6 @@
     <ul>
         <li><a href="https://github.com/kodingcore" target="_blank"><i class="fa-brands fa-github" style="color: #ff9651;"></i>Github</a></li>
         <li><a href="https://linkedin.com/in/kodingcore" target="_blank"><i class="fa-brands fa-linkedin" style="color: #c55a11;"></i> LinkedIn</a></li>
+        <a href="index.php?route=gnu">Politique de confidentialité</a>
     </ul>   
 </nav>
