--- a/views/user/_footer.phtml
+++ b/views/user/_footer.phtml
@@ -9,8 +9,8 @@
 </nav>
 <nav class="contact-foot">
     <ul>
-        <li><a><i class="fa-brands fa-github" style="color: #ff9651;"></i>Github</a></li>
-        <li></li>
-        <li></li>
+        <li><a href="https://github.com/kodingcore" target="_blank"><i class="fa-brands fa-github" style="color: #c55a11;"></i> Github</a></li>
+        <li><a href="https://linkedin.com/in/kodingcore" target="_blank"><i class="fa-brands fa-linkedin" style="color: #c55a11;"></i> LinkedIn</a></li>
+        <a href="index.php?route=gnu">Politique de confidentialité</a>
     </ul>   
 </nav>
