--- a/views/admin/dashboard.phtml
+++ b/views/admin/dashboard.phtml
@@ -48,7 +48,7 @@
         <li><a href="#control-section" id="review-link">Avis</a></li>
         <li><a href="#control-section" id="appointment-link">Rendez-vous</a></li>
         <li><a href="#control-section" id="quotation-link">Devis</a></li>
-        <li><a href="#control-section" id="request-link">Sur-mesure</a></li>
+        <li><a href="#control-section" id="request-link">Sites sur-mesure</a></li>
     </ul>
 </aside>
 <script type="module" src="assets/js/dashboard.js"></script>
