--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -42,7 +42,7 @@
         <?php
             require $this->template;
         ?>
-    <a href="index.php?route=quote-request"><button id="float-btn">Votre site sur-mesure</button></a>
+    <a href="index.php?route=request"><button id="float-btn">Votre site sur-mesure</button></a>
     <footer id="top-footer">
         <?php
             
